data/derived/sp14/progs/unify/prog4403.ml.out
Characters 99-116:
  if (i + j) > 9 then a::(1, (i + j - 10)) else a::(0 , i + j)
                         ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
